# middleware/authMiddleware.js
@@ -1,0 +1,17 @@
+// authMiddleware.js
+import jwt from 'jsonwebtoken';
+
+const SECRET = 'supersecretkey';
+
+export function authenticateToken(req, res, next) {
+  const authHeader = req.headers['authorization'];
+  const token = authHeader && authHeader.split(' ')[1];
+  if (!token) return res.status(401).json({ message: 'Token not found.' });
+  jwt.verify(token, SECRET, (err, user) => {
+    if (err) return res.status(403).json({ message: 'Invalid token.' });
+    req.user = user;
+    next();
+  });
+}
+
+export const JWT_SECRET = SECRET;
